# LLib

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README  README.md  autogen.sh  configure.ac  run.sh
data/ppm/: checker.ppm  duckCM.ppm
debug/: Makefile.am
include/: LLib.h  framework.h
include/Events/: Event.h  EventRegistry.h  KeyEvent.h  MouseEvent.h  Stage.h
include/GLM/: glm.h  texture.h
include/LGlobal/: LGlobal.h
include/LTranslateMatrix/: LTranslateMatrix.h
include/LViewer/: LViewer.h
include/Support/: FileHandle.h  Flags.h
include/Triangle/: BumpMap.h  Camera.h  Color.h  ColorIterator.h  Coord.h  DrawLine.h  DrawTriangle.h  Drawable.h  FrameBuffer.h  GenVertex.h  Image.h  Light.h  Line.h  LineIterator.h  ManagedStatic.h  Material.h  Model.h  ModelToVertex.h  ModelVertex.h  Painter.h  Projection.h  RenderEvents.h  SkyCube.h  Space.h  Texture.h  Transformation.h  Translation.h  Triangle.h  TriangleIterator.h  Vectors.h  Vertex.h
include/algebra/: algebra.h  mat3.h  mat4.h  vec2.h  vec3.h  vec4.h
include/algebra3/: algebra3.h
lib/: Camera.cpp  Color.cpp  ColorIterator.cpp  DrawLine.cpp  DrawTriangle.cpp  Event.cpp  EventRegistry.cpp  FileHandle.cpp  FrameBuffer.cpp  GenVertex.cpp  Image.cpp  LTranslateMatrix.cpp  LViewer.cpp  Light.cpp  Line.cpp  LineIterator.cpp  ManagedStatic.cpp  Material.cpp  Model.cpp  ModelToVertex.cpp  ModelVertex.cpp  MouseEvent.cpp  Painter.cpp  Projection.cpp  Space.cpp  Stage.cpp  Transformation.cpp  Translation.cpp  Triangle.cpp  TriangleIterator.cpp  Vectors.cpp  Vertex.cpp  algebra.cpp  algebra3.cpp  framework.cpp  glm.cpp  glmimg.cpp  mat3.cpp  mat4.cpp  texture.cpp  (+3 more)
lib/Events/: EventRegistry.cpp  KeyEvent.cpp  MouseEvent.cpp
lib/GLM/: README  glm_texture.cpp  glmimg.cpp
lib/Support/: FileHandle.cpp  ManagedStatic.cpp
lib/Triangle/: BumpMap.cpp  Camera.cpp  Color.cpp  DrawLine.cpp  Image.cpp  LineIterator.cpp  Model.cpp  Painter.cpp  Projection.cpp  RenderEvents.cpp  SkyCube.cpp  Space.cpp  Texture.cpp  Transformation.cpp
lib/algebra/: algebra.cpp  mat3.cpp  mat4.cpp  vec2.cpp  vec3.cpp  vec4.cpp
tools/: main.cpp  stdafx.h
unittests/: AlgebraTest.cpp  AlgebraTest.h  ImageTest.cpp  ImageTest.h  LineTest.cpp  LineTest.h  ProjectTest.cpp  ProjectTest.h  SpaceTest.cpp  SpaceTest.h  TextureTest.cpp  TextureTest.h  TriangleTest.cpp  TriangleTest.h
